# fuel-core-backup-cli

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
src/: archive.rs  backup.rs  main.rs  restore.rs
