[package]
name = "fuel-core-backup-cli"
version = "0.43.1"
edition = "2021"

[dependencies]
clap = {  version = "4.5.38" , features = ["derive"]}
anyhow = "1.0.97"
fuel-core = { git = "https://github.com/fuellabs/fuel-core", rev = "6403b73c5b2af2fedfd2892cad78bf97e84a8101" ,features = ["rocksdb", "backup"] }
tar = { version = "0.4.44", optional = true}
tempfile = { version = "3.20.0", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
archive = ["dep:tar", "dep:tempfile", "dep:rayon"]
default = ["archive"]
